added support for displaying tech stack

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -45,6 +45,7 @@ layout: default
       </section>
 
       <footer class="page__meta">
+        {% include technologies.html %}
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
