limit tech stack images to 200px

--- a/_includes/technologies.html
+++ b/_includes/technologies.html
@@ -6,7 +6,7 @@
 {% assign item = tech[1] %}
 <div>
     <a href={{ item.url }}>
-        <img src={{ item.image }} alt={{ item.name }} title={{ item.title }}>
+        <img class="technology-stack" src={{ item.image }} alt={{ item.name }} title={{ item.title }}>
     </a>
 </div>
 {% endfor %}
