--- a/_includes/technologies.html
+++ b/_includes/technologies.html
@@ -4,7 +4,7 @@
 
 {% for tech in page.techs %}
 <div>
-    <a href={{ item.url }}>
+    <a href={{ tech.url }}>
         <img class="technology-stack" src={{ tech.image }} alt={{ tech.name }} title={{ tech.title }}>
     </a>
 </div>
